src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {

  // Background Colors
  --background-dark-blue: #0b111b;
  --background-dark-gray: #2b313a;
  --background-darker-gray: #131923;

  // Primary Colors
  --primary-pink: #fe3dce;
  --primary-blue: #26afe6;
  --primary-white: #ffffff;

  --primary-dark-gray: #3A3737;

  // secondary Colors
  --secondary-pink: #faaef2;
  --secondary-blue: #bff2ff;
  --secondary-purple: #9989ff;

  // Gradients Colors
  --gradient-pink-to-blue: linear-gradient(0.25turn, var(--primary-pink), var(--primary-blue));
  --gradient-pink-to-baby-blue: linear-gradient(0.25turn, var(--secondary-pink), var(--secondary-blue));
  --gradient-purple-to-pink: linear-gradient(0.25turn, var(--secondary-purple), var(--secondary-pink));

  // Brand Colors
  --polka-pink: #E6007A;
  --polka-yellow: #D3FF33;
  --polka-green: #56F39A;
  --polka-purple: #552BBF;
  --polka-cyan: #00B2FF;
  --bitcoin-orange: #F7931A;

}


* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  // background-color: var(--background-dark-blue);
  // color: var(--primary-white);
  // background-color: var(--primary-white);
  color: var(--primary-dark-gray);
  scroll-behavior: smooth;
}



img {
  object-fit: contain;
}

// .landing {
//   // background: url(../../public/home/Landing_donut_top.svg) no-repeat bottom left;
//   // background: url(../../public/home/Landing_donut_right_bottom.svg) no-repeat bottom right;
//   background: url(/home/landing_donut_top.svg) no-repeat bottom right;
// }

.landing-donut {
  width: 640px;
  height: 320px;
  background: url(/home/landing-stripe-sm.svg) no-repeat;
  transform-origin: center;
  overflow: visible;


  @media (min-width: 640px) {
    width: 768px;
    height: 380px;
    background: url(/home/landing-stripe.svg) no-repeat;
  }

  @media (min-width: 768px) {
    width: 1024px;
    height: 500px;
  }

  @media (min-width: 1024px) {
    right: -25px;
    bottom: 0;
    position: absolute;
    translate: 50% calc(50% - 96px);
    background: url(/home/landing_rgb_donut.svg) no-repeat;
    width: 1600px;
    height: 1600px;
  }

  @media (min-width: 1400px) {
    width: 2000px;
    height: 2000px;
  }
}

// .landing-bg-2 {
//   // background: url(../../public/home/Landing_donut_bottom.svg) no-repeat top left;
//   // background: url(/home/landing_donut_bottom.svg) no-repeat top right;

// }

/* For Webkit-based browsers (Chrome, Safari and Opera) */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

.tagmanager-hide {
  display: none;
  visibility: hidden;
  height: 0;
  width: 0;
}

/* font awesome import */
@import url("https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css");

.ul-circles * {
  // margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.ul-circles {
  --innerSize: 6rem;
  --rimSize: 1.5rem;

  display: grid;
  grid-template-columns: repeat(var(--repeatVal, 1), calc(var(--innerSize)));
  justify-content: center;
  gap: var(--rimSize);

  padding: var(--rimSize);
  font-family: sans-serif;
  list-style: none;
}

.ul-circles.ul-circles-vertical {
  --repeatVal: 1;
}

.ul-circles>a {
  display: grid;
  grid-template-rows: 1fr 1fr;
  gap: calc(var(--rimSize) / 16);

  aspect-ratio: 1/1;
  padding: calc(var(--rimSize) / 16);
  border-radius: 50%;

  text-align: center;
  position: relative;
}

.ul-circles>a::before,
.ul-circles>a::after {
  content: "";
  position: absolute;
  aspect-ratio: 1/1;
  border-radius: inherit;
  z-index: -1;
}

.ul-circles>a::before {
  width: calc(100% + calc(2 * var(--rimSize)));
  left: calc(var(--rimSize) * -1);
  top: calc(var(--rimSize) * -1);
  background: var(--accent-color);
  clip-path: polygon(var(--clipX1, 0%) var(--clipY1, 0%),
      var(--clipX2, 50%) var(--clipY1, 0%),
      var(--clipX2, 50%) var(--clipY2, 100%),
      var(--clipX1, 0%) var(--clipY2, 100%));
  box-shadow: inset 2px -2px 10px rgba(255, 255, 255, 0.25),
    inset -2px 2px 10px rgba(0, 0, 0, 0.5);
}

.ul-circles>a:nth-child(even)::before {
  --clipX1: 50%;
  --clipX2: 100%;
}

@media (min-width: 40rem) {
  .ul-circles {
    --repeatVal: auto-fit;
  }

  .ul-circles:not(.ul-circles-vertical)>a:nth-child(even)::before {
    --clipX1: 0%;
    --clipY1: 0%;
    --clipX2: 100%;
    --clipY2: 50%;
  }

  .ul-circles:not(.ul-circles-vertical)>a:nth-child(odd)::before {
    --clipX1: 0%;
    --clipY1: 50%;
    --clipX2: 100%;
    --clipY2: 100%;
  }
}

.ul-circles>a::after {
  width: 100%;
  // background: #fdfdfd;
  box-shadow: -0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
}

.ul-circles>a>i {
  font-size: 1.5rem;
  // color: var(--primary-dark-gray);
  align-self: end;
}

.ul-circles>a>i {
  font-size: 1.5rem;
  // color: var(--primary-dark-gray);
  align-self: end;
}




.has-progress-circle {
  --accent-color: linear-gradient(0deg,
      rgba(38, 175, 230, 1) 0%,
      rgba(153, 137, 255, 1) 25%,
      rgba(254, 61, 206, 1) 45%,
      rgba(254, 61, 206, 1) 55%,
      rgba(153, 137, 255, 1) 75%,
      rgba(38, 175, 230, 1) 100%);

  @media (min-width: 640px) {
    --accent-color: linear-gradient(90deg,
        rgba(38, 175, 230, 1) 0%,
        rgba(153, 137, 255, 1) 25%,
        rgba(254, 61, 206, 1) 45%,
        rgba(254, 61, 206, 1) 55%,
        rgba(153, 137, 255, 1) 75%,
        rgba(38, 175, 230, 1) 100%);
  }
}

.has-no-progress-circle {
  --accent-color: #E2E8F0
}

.is-nft-mint {
  --accent-color: #F3A22D
}

.video-description-container {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
}

.quest-container {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.lesson-list-container h2 {
  padding-top: 1rem;
  text-align: center;
}

.video-section-heading {
  text-align: center;
}

// .h-screen {
//   height: 70vh;
// }

.ul-plain {
  -moz-column-count: 2;
  -moz-column-gap: 1rem;
  -webkit-column-count: 2;
  -webkit-column-gap: 1rem;
  column-count: 2;
  column-gap: 1rem;
  padding: 0;
  /* Reset the default padding */
}

.ul-plain li {
  padding: 0.5rem;
  /* Adjust the padding value as per your preference */
}

.claim-button-container {
  padding: 0.5rem;
}

.lesson-list-container h3 {
  text-align: center;
}


.gdpr-container>p {
  padding: 1rem;
}

.gdpr-container>table {
  margin-bottom: 2rem;
  margin-top: 2rem;
  border: solid black
}

.impressum {
  .header {
    font-size: 24px;
    margin-bottom: 10px;
  }

  .sub-header {
    font-size: 20px;
    margin-bottom: 5px;
  }

  .section {
    margin-bottom: 15px;
  }

}

.disclaimer {
  font-family: Arial, sans-serif;
}

.disclaimer h1 {
  font-size: 24px;
  margin-bottom: 10px;
}

.disclaimer h2 {
  font-size: 20px;
  margin-bottom: 5px;
}

.disclaimer p {
  margin-bottom: 15px;
}

.disclaimer ul {
  list-style-type: disc;
  padding-left: 40px;
  margin-bottom: 15px;
}


.about-us-container {
  max-height: 30rem;
  overflow: scroll;
  text-align: center;
}

.red-border {
  border: solid red;
}

.red-text {
  color: red;
}

.nft-card-section {
  h2 {
    text-align: center;
  }
}

.nft-card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.nft-card {
  h2 {
    text-align: center
  }
}


.greyed {               
  opacity: 0.2;
  filter: alpha(opacity=40);
  zoom: 1;
}

// .video-modal-container {
//   max-height: 40rem;
//   overflow: scroll;
// }

.input-container-modal {
  justify-content: center;
}

.input-field-dot {
  max-width: 20rem;
  padding: 1rem;
  border: 1px solid #ccc;
  border-radius: 20px; /* Adjust the value to change the level of rounding */
  margin-right: 10px;
}

.input-field-dot::placeholder {
  color: #999;
}

.input-field-dot:focus {
  outline: none;
  border-color: #888;
}

// .nav-button-container {
//   justify-content: space-around;
//   padding: 2rem;
// }


// .buttons-container-video-end {
//   display: flex;
//   justify-content: space-between;
//   padding: 5rem;
// }



@keyframes fade-in-up {
  0% { opacity: 0; }
  100% { transform: translateY(0); opacity: 1; }
}

.video {  

  &.stuck {
    position: fixed;
    transform: translateY(100%);
    top: 0;
    left: 0;
    // width: 20rem;
    width: 98vw;
    height: 15;
    animation: fade-in-up .25s ease forwards;
    
    @media (min-width: 768px) {
      top: unset;
      left: unset;
      bottom: 20px;
      right: 20px;
      width: 30rem;
    }


  }
}


.modal-open-no-scroll {

  @media (min-width: 768px) {
    height: 1vh;
    overflow-y: hidden;
  }
}

